# malaria-ai-xai-diagnostic-tool

./: .dockerignore  .gitignore  Diagnosis_model.ipynb  Dockerfile  MODEL_CARD.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  mlops-governance.yml  release-container.yml
contracts/api/: health_response.schema.json  monitoring_history_response.schema.json  monitoring_summary_response.schema.json  predict_request.md  prediction_response.schema.json  review_feedback_request.schema.json  trace_bundle_response.schema.json
deploy/cloud/: README.md
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml
docs/: ARCHITECTURE.md  DATASETS.md  DEPLOYMENT.md  MLOPS.md  OPERATIONS.md  PORTFOLIO_BRIEF.md  TRACE_REVIEW_FAILURES.md
malaria_App/: __init__.py  api.py  app.py  deploy_cloudflare.py  diagnostic_core.py  middleware.py  model_registry.py  schemas.py
malaria_App/static_dashboard/: app.js  index.html  styles.css
registry/: model_registry.json
reports/calibration/: calibration_bins.csv  calibration_report.md  calibration_summary.json
reports/error_analysis/: error_gallery.md  (+1 more)
scripts/: calibration_analysis.py  confidence_intervals.py  drift_monitor.py  error_analysis.py  evaluate_threshold.py  experiment_tracking.py  export_api_contracts.py  load_test.py  predict_image.py  register_model.py  retraining_pipeline.py  robustness_analysis.py  train_model.py  validate_kubernetes.py
tests/: test_core_safety.py
(+12 files in other folders)
